# GtkObjectManager

./: CMakeLists.txt  README.md
gtkapp/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Model.cpp  Model.hpp  NavigationWindow.cpp  NavigationWindow.hpp  main.cpp
gtkapp/controllers/: AddNewItem.cpp  AddNewItem.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  MainView.cpp  MainView.hpp  UpdateItem.cpp  UpdateItem.hpp
gtkapp/models/: CMakeLists.txt  Item.hpp  PimplItem.hpp  PimplItemDemo.cpp  PimplItemDemo.hpp  ValueItem.hpp  ValueItemDemo.cpp  ValueItemDemo.hpp  common.hpp
gtkapp/types/: CMakeLists.txt  Item.hpp  common.hpp
gtkapp/viewmodels/: CMakeLists.txt  MainViewModel.cpp  MainViewModel.hpp
gtkapp/views/: AddNewItem.cpp  AddNewItem.hpp  CMakeLists.txt  MainView.cpp  MainView.hpp  UpdateItem.cpp  UpdateItem.hpp
gtkapp/widgets/: CMakeLists.txt  ItemWidget.cpp  ItemWidget.hpp  ItemsTreeView.cpp  ItemsTreeView.hpp  common.hpp
